// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ethRewards After rewards earnings should update 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "airdropTokens": 0,
  "cashOutAmt": 0,
  "cashOutAttempt": false,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "earned": 2.3e-16,
  "endBalance": 0,
  "estimatedPostPayout": 0,
  "legacyAirdrop": 0,
  "legacyTokens": 0,
  "payoutTime": "[SANITIZED]",
  "post": "000000000000000000000003",
  "prevBalance": 0,
  "referralTokens": 0,
  "shares": 4.711687595755899,
  "source": "post",
  "spent": 0,
  "stakedTokens": 11.100000000000001,
  "status": "paidout",
  "totalPostShares": 4.711687595755899,
  "totalPreviousPaidout": 0,
  "type": "coins",
  "updatedAt": "[SANITIZED]",
  "user": "a00000000000000000000000",
}
`;

exports[`ethRewards After rewards pending posts should update 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "airdropTokens": 0,
  "cashOutAmt": 0,
  "cashOutAttempt": false,
  "community": "crypto",
  "communityId": "c00000000000000000000002",
  "createdAt": "[SANITIZED]",
  "earned": 0,
  "endBalance": 0,
  "estimatedPostPayout": 2.692307692307693e-16,
  "legacyAirdrop": 0,
  "legacyTokens": 0,
  "payoutTime": "[SANITIZED]",
  "post": "000000000000000000000006",
  "prevBalance": 0,
  "referralTokens": 0,
  "shares": 6.663332499583073,
  "source": "post",
  "spent": 0,
  "stakedTokens": 22.200000000000003,
  "status": "pending",
  "totalPostShares": 6.663332499583073,
  "totalPreviousPaidout": 0,
  "type": "coins",
  "updatedAt": "[SANITIZED]",
  "user": "b00000000000000000000000",
}
`;

exports[`ethRewards After rewards should create notification 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "byUsers": Array [],
  "byUsersHandle": Array [],
  "coin": 2.3e-16,
  "coinType": "eth",
  "createdAt": "[SANITIZED]",
  "forUser": "a00000000000000000000000",
  "group": Array [],
  "personal": true,
  "post": "000000000000000000000003",
  "read": false,
  "source": "post",
  "text": "You earned 0T coins from upvoting this post",
  "type": "reward",
  "updatedAt": "[SANITIZED]",
}
`;

exports[`ethRewards Rewards should compute correctly 1`] = `
Object {
  "payoutData": Object {
    "crypto": Object {
      "community": "crypto",
      "distributedRewards": 269,
      "payouts": Object {
        "b00000000000000000000000": 269,
        "c00000000000000000000000": 0,
      },
      "postPayouts": Array [
        Object {
          "payout": 269.2307692307693,
          "payoutShare": 0.05,
          "rank": 100,
          "title": "000000000000000000000005",
        },
        Object {
          "payout": 0,
          "payoutShare": undefined,
          "rank": 0,
          "title": "000000000000000000000007",
        },
      ],
    },
    "relevant": Object {
      "community": "relevant",
      "distributedRewards": 459,
      "payouts": Object {
        "a00000000000000000000000": 230,
        "b00000000000000000000000": 145,
        "c00000000000000000000000": 84,
      },
      "postPayouts": Array [
        Object {
          "payout": 230.76923076923077,
          "payoutShare": 0.05,
          "rank": 66.91,
          "title": "000000000000000000000003",
        },
        Object {
          "payout": 230.76923076923077,
          "payoutShare": 0.05,
          "rank": 100,
          "title": "000000000000000000000004",
        },
      ],
    },
  },
  "totalDistributedRewards": 728,
}
`;

exports[`ethRewards Votes should be created 1`] = `
Object {
  "__v": 0,
  "_id": "[SANITIZED]",
  "amount": 1,
  "community": "relevant",
  "communityId": "c00000000000000000000001",
  "createdAt": "[SANITIZED]",
  "downVotes": 0,
  "investor": "a00000000000000000000000",
  "ownPost": false,
  "paidOut": false,
  "partialRelevance": 0,
  "partialUsers": 0,
  "post": "000000000000000000000003",
  "rankChange": 0,
  "relevance": 0,
  "relevantPoints": 0,
  "shares": 4.711687595755899,
  "stakedTokens": 11.100000000000001,
  "updatedAt": "[SANITIZED]",
  "upvotes": 0,
}
`;
